# invest-certo

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run_pipeline.sh
app/: __init__.py  data_access.py  streamlit_app.py
app/ai/: __init__.py  agent.py  config.py  prompts.py  tools.py
app/pages/: 01_Chat_IA.py
config/: assets.txt
data_contracts/: bronze.md  bronze_prices.md  gold.md  gold_asset_features.md  gold_ranking_snapshot.md  silver.md  silver_asset_daily_status.md  silver_prices_clean.md
docs/: deploy_vps.md  vps_infra_current.md
ops/nginx/: invest-certo.conf
ops/systemd/: invest-certo-dashboard.service  invest-certo-pipeline.service  invest-certo-pipeline.timer
pipelines/bronze/: collect_prices.py  query_prices.py
pipelines/gold/: build_features.py
pipelines/silver/: transform_prices.py
queries/bronze/: date_range_by_asset.sql  latest_rows_for_asset.sql  summary_by_asset.sql
queries/gold/: latest_recommendations.sql  market_overview.sql  price_history_panel.sql  ranking_history.sql
queries/silver/: calendar_gap_anomalies.sql  eligibility_status_summary.sql  gold_ready_assets_latest.sql  latest_asset_status.sql  prices_clean_summary_by_asset.sql
scripts/: deploy_pull.sh
src/collect/: fetcher.py  reader.py  writer.py
src/validators/: __init__.py  bronze_prices_validator.py  gold_validator.py  (+2 more)
tests/: test_ai_tools.py  test_bronze_collect_prices.py  test_bronze_data.py  test_bronze_prices_validator.py  test_bronze_query.py  test_dashboard_data_access.py  test_gold_build_features.py  test_silver_transform.py
