[project]
name = "invest-certo"
version = "0.1.0"
description = "Portfolio Advisor (RAG + Data Engineering)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "duckdb",
    "boto3",
    "requests",
    "yfinance>=1.2.0",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
