[project]
name = "invest-certo"
version = "0.1.0"
description = "Portfolio Advisor (RAG + Data Engineering)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "duckdb",
    "boto3",
    "requests",
    "yfinance>=1.2.0",
    "pyarrow>=17.0.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40.1",
    "plotly>=6.6.0",
    "agno>=2.6.20",
    "openai>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
